# ct

./: Cargo.toml  README.md  build_and_copy.sh  check_ct.sh  ct  ct.toml  ct_DDD.md  ct_PRD.md  ctrepl  gen_and_filter_rustdoc.rs  install.sh  test_improved_workflow.sh
bins/ct/: Cargo.toml
bins/ct-daemon/: Cargo.toml
bins/ct-daemon/src/: main.rs  server.rs  state.rs
bins/ct/src/: client.rs  commands.rs  main.rs
bins/ctrepl/: Cargo.toml
bins/ctrepl/src/: main.rs  repl.rs
libs/ct-core/: Cargo.toml
libs/ct-core/src/: config.rs  lib.rs  models.rs  transport.rs  utils.rs
libs/ct-db/: Cargo.toml
libs/ct-db/src/: lib.rs  migrations.rs  queries.rs
libs/ct-indexer/: Cargo.toml
libs/ct-indexer/src/: discovery.rs  lib.rs  watcher.rs
libs/ct-protocol/: Cargo.toml
libs/ct-protocol/src/: lib.rs
minimal_test/: Cargo.toml
minimal_test/src/: main.rs
src/: rustdoc_parser.rs
test_workspace/: .ctignore  Cargo.toml  ct  ct-daemon.d  ct.d  ctrepl  ctrepl.d
test_workspace/crate_a/: Cargo.toml
test_workspace/crate_a/src/: lib.rs
test_workspace/crate_b/: Cargo.toml
test_workspace/crate_b/src/: lib.rs
test_workspace/shared/src/: lib.rs
test_workspace/simple_test/: Cargo.toml
test_workspace/simple_test/src/: lib.rs
