[package]
name = "ct"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ct"
path = "src/main.rs"

[dependencies]
ct-protocol.workspace = true
ct-core.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net"] }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["net"] }

[dev-dependencies]
tempfile = "3.14"