[package]
name = "ctrepl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ctrepl"
path = "src/main.rs"

[dependencies]
ct-protocol.workspace = true
ct-core.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
rustyline.workspace = true

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net"] }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["net"] }

[dev-dependencies]
tempfile = "3.14"