[package]
name = "ct-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ct-core.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"