[package]
name = "ct-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ct-core.workspace = true
ct-db.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
notify.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"